# github-issue-previewer

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: enhancement_request.yml  feature_request.yml
.github/repository_metadata/: gh_repo.yml
.github/workflows/: label_generator.yml
docs/: versioning_policy.md
src/github_issue_previewer/: cli.py
src/github_issue_previewer/style_template/: github-issue-template.css  github-issue-template.html
