[project]
name = "github-issue-previewer"
version = "0.1.3"
description = "A lightweight tool to preview GitHub Issue templates from YAML in real-time with Jinja2 and Watchdog."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.entry-points.console_scripts]
github-issue-previewer = "github_issue_previewer.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"github_issue_previewer.style_template" = ["*.css", "*.html"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
